# Bin-Picking

./: CMakeLists.txt  README.md  package.xml  setup.py
api_handler/: api_handler_node.py  api_handler_node_polling.py  door_handle_node.py  emergency_button_node.py  stack_light_node.py
api_handler/hmi_static/: index.html  script.js  style.css
launch/: api_handler_launch.py
srv/: GetLastBarcode.srv  ScanBarcode.srv  SetStackLightState.srv  ToggleDoorState.srv
